log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: log-output-svc
              port:
                number: 80
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: ping-pong-svc
              port:
                number: 80
        - path: /pings
          pathType: Prefix
          backend:
            service:
              name: ping-pong-svc
              port:
                number: 80
