log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: exercises
spec:
  hostnames:
    - exercises.localhost
  parentRefs:
  - name: shared-gateway
    namespace: default
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: log-output-svc
        port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /pings
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: ping-pong-svc.exercises.svc.cluster.local
      backendRefs:
        - name: kourier-internal
          namespace: kourier-system
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: ping-pong-svc.exercises.svc.cluster.local
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kourier-internal
          namespace: kourier-system
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /dummy-site
      backendRefs:
        - name: example-dummysite-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /greeter
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: greeter-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /wikipedia
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: wikipedia-svc
          port: 80
